<resources>
    <string name="app_name">Do.AKTIV</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="database_connction_failure">Failed to connect to database!</string>
    <string name="database_access_failure">Failed to access database!</string>
    <string name="query_execution_failure">Failed to execute Query!</string>
    <string name="network_failure">No Network!</string>
    <string name="missing_driver_failure">Driver missing!</string>
    <string name="no_connction_failure">Not yet connected!</string>

    <string name="action_settings">Settings</string>

    <string name="calender_grid">Calender</string>
    <string name="calender_list">Event List</string>
    <string name="calender_organized_by">organized by</string>
    <string name="choose_event">Choose an Event</string>
    <string name="drawer_home">Home</string>
    <string name="drawer_calender">Calender</string>
    <string name="drawer_search">Search</string>
    <string name="drawer_about">About us</string>
    <string name="drawer_settings">Settings</string>
    <string name="calender_show_adress">Show Address</string>
    <string name="drawer_add_calender">Add event to calender</string>

    <string name="licenses_open">Open-Source-Licences</string>
    <string name="clear_cache">Clear App-Data</string>
    <string name="share">Share</string>
    <string name="host_title">This event is organized by:</string>
    <string name="website">Website</string>
    <string name="mail">Mail</string>
    <string name="phone">Phone</string>
    <string name="participate">Participate</string>
    <string name="sponsors_title">Other Sponsors are:</string>
    <string name="app_version_title">App-Version</string>
    <string name="duration">Duration</string>
    <string name="date">Date</string>
    <string name="age">Age</string>
    <string name="address">Address</string>
    <string name="participants">Participants</string>
    <string name="participating">You are participating!</string>
    <string name="participate_error">Error while requesting participate!</string>
    <string name="rating_error">Error while rating!</string>
    <string name="participantsNotCounted">Participants are not counted.</string>
    <string name="rate">Rate</string>

</resources>
